[package]
name = "merkle-sum-tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
ff = { version = "0.13", features = ["derive"] }
ff_ce = "0.14.3"
mimc-sponge-rs = { git = "https://github.com/tzilkha/mimc-sponge-rs" }
ntest_timeout = "0.9.2"
num-traits = "0.2.19"
once_cell = "1.19.0"
rand = "0.4"
